1. added new authorization plugin 2. removed all of the junk from the pad.html 3. added main.html that will show 401

--- a/src/templates/pad.html
+++ b/src/templates/pad.html
@@ -115,6 +115,7 @@
             </ul>
             <ul class="menu_right">
                 <% e.begin_block("editbarMenuRight"); %>
+                <!--
                 <li data-key="import_export">
                     <a class="grouped-left" id="importexportlink" data-l10n-id="pad.toolbar.import_export.title">
                         <span class="buttonicon buttonicon-import_export"></span>
@@ -142,7 +143,8 @@
                     </a>
                 </li>
                 <li class="separator"></li>
-                <li id="usericon" data-key="showusers">
+            -->
+                <li id="usericon" data-key="showusers" style="display: none;">
                     <a data-l10n-id="pad.toolbar.showusers.title">
                         <span class="buttonicon buttonicon-showusers"></span>
                         <span id="online_count">1</span>
