1. set padding of the buttons 2. setup domain name inside of the html for iframe access 3. change the run question

--- a/src/templates/pad.html
+++ b/src/templates/pad.html
@@ -5,6 +5,9 @@
 <!doctype html>
 <html>
         <title><%=settings.title%></title>
+        <script type="text/javascript">
+            document.domain = '<%=settings.domain%>';
+        </script>
         <script>
           /*
           |@licstart  The following is the entire license notice for the
